# nyc-street-fix

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  api2.py  app.py  pyproject.toml
agents/: __init__.py  orchestrator.py  prompts.py
config/: __init__.py  settings.py  taxonomy.py
demo/: demo_script.py
demo/output/: complaint.txt  incident.json  translations.json
docs/: architecture.md
live/: __init__.py  stream.py
schemas/: __init__.py  incident.py
tests/: test_check_mta_elevators.py  test_classify_scene.py  test_draft_311_report.py  test_e2e.py  test_extract_incident.py  test_generate_visual_card.py  test_geocode_location.py  test_lookup_flood_history.py  test_translate_summary.py
tools/: __init__.py  check_mta_elevators.py  classify_scene.py  communications.py  detect_language.py  draft_311_report.py  extract_incident.py  generate_visual_card.py  geocode_location.py  lookup_flood_history.py  reverse_geocode_location.py  submit_complaint.py  translate_summary.py
